[tool.poetry]
name = "llmcompiler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.1.1"
openai = "^1.8.0"
sentence-transformers = "^2.2.2"
transformers = "^4.36.2"
unstructured = {extras = ["pdf", "pptx"], version = "^0.12.0"}
chromadb = "^0.4.22"
langchain-openai = "^0.0.2.post1"
numexpr = "^2.8.8"
langfuse = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
